--- a/Part1/docs/style.css
+++ b/Part1/docs/style.css
@@ -1,7 +1,29 @@
-html
+html, body
 {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
+	margin: 0;
+	padding: 0;
+}
+
+body > header
+{
+	height: 97px;
+	background: url('../../common/header_bg.gif');
+}
+
+body > header img
+{
+	float: right;
+}
+
+body > header h1
+{
+	color: white;
+	position: relative;
+	margin: 0;
+	top: 30px;
+	left: 10px;
 }
 
 #\/ h2:after
@@ -9,6 +31,11 @@ html
 	content: "(Root)";
 	font-size: small;
 	color: gray;
+}
+
+main
+{
+	padding: 10px;
 }
 
 
@@ -21,10 +48,11 @@ html
 		border-radius: 5px 5px 0 0;
 		border-bottom: 0;
 		z-index: 2;
-		padding: 5px 10px;
+		padding: 5px;
 		color: white;
-		width: 40px;
+		width: 50px;
 		cursor: pointer;
+		text-align: center;
 	}
 
 	section.eg div:before
@@ -100,7 +128,7 @@ html
 	span.crlf
 	{
 		display: inline-block;
-		width: 15px;
+		width: 16px;
 		height: 10px;
 		font-weight: bolder;
 		color: black;
