Changed 'empty' message to CSS

--- a/Part1/docs/style.css
+++ b/Part1/docs/style.css
@@ -44,9 +44,10 @@ main
 		color: #999;
 	}
 
-	.notice
+	.params:empty:before
 	{
 		font-style: italic;
+		content: "This endpoint accepts no URI parameters";
 	}
 
 	.warn:before
